--- a/TODO
+++ b/TODO
@@ -6,7 +6,9 @@
 Add/Update Unit Tests for each pass
    Check after each pass
    write test that checks instance types are correctly lowered
+error on uninitialized wires
 ensure module names are unique
+add check that limits size of width of dshl
 add efficient prefix checker 
 Change to new low firrtl
 add clock type
