Correct extmodule example in spec (#768)

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -130,7 +130,7 @@ Note that a module definition does {\em not} indicate that the module will be ph
 Externally defined modules consist of a given name, and a list of ports, whose types and names must match its external definition.
 
 \begin{verbatim}
-module MyExternalModule :
+extmodule MyExternalModule :
    input foo: UInt
    output bar: UInt
    output baz: SInt
