Correct a typo in spec.tex (#1063)

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -1606,7 +1606,7 @@ Given a component with a bundle type, the suffix \verb|$|{\em f} is appended to 
 
 \subsection{Prefix Uniqueness} \label{prefix_unique}
 
-The {\em symbol sequence} of a name is the ordered list of strings that results from splitting the name at each occurence of the `\$' character.
+The {\em symbol sequence} of a name is the ordered list of strings that results from splitting the name at each occurrence of the `\$' character.
 
 A symbol sequence $a$ is a {\em prefix} of another symbol sequence $b$ if the strings in $a$ occur in the beginning of $b$.
 
